test/array.ruse
// fail

fn main() int {
    var arr []int
    arr[0] = 42
    arr[0 + 20] = 42
    len(arr[0]) // error
    return arr[0 + 20]

    var arr2 []int = alloc(3)
    arr2 = alloc(3)

    arr2 = arr2[0] // error
    arr2[0] = arr2 // error
    arr2[0] = 3

    var notype = alloc(3)
    notype[0] = arr2 // error
    notype[0] = arr2[0]

    var span = &arr
    span[0] = 3
}
